[Feat] 멤버 삭제 기능 추가

--- a/src/main/resources/templates/member-list.html
+++ b/src/main/resources/templates/member-list.html
@@ -167,6 +167,7 @@
   <div class="action-buttons">
     <a href="/submit-ppt" class="btn">PPT 제출 페이지</a>
     <a href="/submission-status" class="btn">제출 대상 상태 변경</a>
+    <a href="/members/delete" class="btn btn-danger">멤버 삭제</a>
   </div>
 </div>
 </body>
